--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 width.textContent = cat.width + " px";
                 height.textContent = cat.height + " px";
             } catch (error) {
-                console.error("Error al obtener el gato:", error);
+                console.log("al obtener el gato:", data);
             }
         }
 
